syntax = "proto3";

package protoapi;

import "google/protobuf/timestamp.proto";

service UserDAO {
  rpc SaveUser(User) returns (SaveResponse) {}
  rpc UpdateUser(User) returns (UpdateResponse) {}
  rpc GetUser(Id) returns (UserResponse) {}
  rpc DeleteUser(Id) returns(DeleteResponse) {}
}

message Id {
  uint64 value = 1;
}

message User {
  Id id = 1;
  google.protobuf.Timestamp created_at = 2;    
  google.protobuf.Timestamp updated_at = 3;    
  google.protobuf.Timestamp deleted_at = 4;
  int64 age = 5;
  string name = 6;
  string email = 7;
}

message SaveResponse {
  User user = 1;
}

message UpdateResponse {
  User user = 1;
}

message UserResponse {
  User user = 1;
}

message DeleteResponse {
}
